## Process this file with automake to produce Makefile.in
## $Id$

include_HEADERS = see

see_HEADERS=	see/cfunction.h see/debug.h see/error.h see/eval.h	\
                see/input.h see/intern.h see/interpreter.h see/mem.h	\
                see/native.h see/no.h see/object.h see/see.h		\
                see/string.h see/try.h see/type.h see/value.h

