## Process this file with automake to produce Makefile.in
## $Id$

pkginclude_HEADERS =	cfunction.h debug.h error.h eval.h input.h	\
                        intern.h interpreter.h mem.h native.h no.h	\
                        object.h see.h string.h try.h type.h value.h

install-data-local:
	$(INSTALL_DATA) config.h $(pkgincludedir)/config.h
